--- a/modules/1237/pages/doc3-overview.adoc
+++ b/modules/1237/pages/doc3-overview.adoc
@@ -1,25 +1,34 @@
 = Document 3: Chamber's Reply Concerning Krückeberg Request (March 11, 1799)
 :page-role: wide
 
-Document 3 is the March 11, 1799, response from the Vormundliche Cammer (Guardianship Chamber) to the civil servants in Bückeburg, replying
-to their February 27^th^ report.
-
-- It references "Cam:53" Use the meaning of the header to explain that the Cammer is now in decision-making mode.
-They initially did a Forestry Assessment, which the sent to the Amt, who reply about its impact on the locals. They
-have reviewed wha the Amts said and now instruct the Aemter that:
-
-* pt. 1
-* pt. 2
-* etc.
-
-Mention who the individuals in these reports are. MKaas's signature appears again.
-
-
 [cols="1a,1a",frame="none",grid="none",options="noheader"]
 |===
 |image::05-right-page.png[scale=25,link=self]
 
 |image::06-left-page.png[scale=25,link=self]
 |===
+
+== Narrative Overview
+
+=== Recapitulation: Cammer Reaction to Document 2 (10 March 1799)
+
+After first reviewing Documenmt 2 on March 6, 1799, the Cammer noted, on March 10, 1799, their intention to approve
+Jobst Heinrich's request and to allocated land for him to purchase.
+
+=== Offical Directive (11 March 1799) from Cammer to Ämter
+
+On March 11. 1799, the official reply of Vormundliche Cammer to the Ämter (offices) of Bückeburg and Arensburg was
+written. The header references (*"S.S"* in upper left, meaing *referenced above*) the document denoted by *"Cam:53"*,
+which is Document 2.
+
+The Cammer states:
+
+* They will allocate the land Krückeberg, no. 10 Berenbusch, provided he agrees to:
+** plant three saplings at another forest site for each willow or poplar felled and sold by the forestry
+office
+** pay 24 Mariengroschen per square rod for the plot.
+* If Krückeberg agrees to these conditions, the Amt is to:
+** have the plot surveyed by a sworn surveyor
+** and report its size back to the Cammer.
 
 
