--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -22,8 +22,8 @@
 * xref:image5-left-page.adoc[]
 * xref:doc3-overview.adoc[]
 ** Breakdown: Header, Cammer Directive
-** xref:doc3-header.adoc[]
-** xref:doc3.adoc[]
+*** xref:doc3-header.adoc[]
+*** xref:doc3.adoc[]
 * xref:image6-right-page.adoc[]
 * xref:image7-right-page.adoc[]
 * xref:image8-right-page.adoc[]
