--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -21,6 +21,7 @@
 *** xref:doc2-official-reaction.adoc[]
 * xref:image5-left-page.adoc[]
 * xref:doc3-overview.adoc[]
+** xref:doc3-full.adoc[]
 ** Breakdown: Header, Cammer Directive
 *** xref:doc3-header.adoc[]
 *** xref:doc3.adoc[]
