--- a/modules/1237/pages/image8-right-page.adoc
+++ b/modules/1237/pages/image8-right-page.adoc
@@ -3,9 +3,9 @@
 
 Document 4½ is signed by Lieutenant Funck, a "beeidigter Landmesser" (sworn land surveyor). As a technical specialist, Funck was not part of the
 administrative offices (Amt) that issued Document 4. His report was therefore xref:doc-index.adoc[logged] as an independent piece of correspondence,
-even though it accompanied xref:image6-right-page.adoc[document 4].
+even though it accompanied xref:doc4.adoc[document 4].
 
-NOTE: The surveyor completed his drawing over a year before it was enclosed in xref:image6-right-page.adoc[document 4]. His drawing is
+NOTE: The surveyor completed his drawing over a year before it was enclosed in xref:doc4.adoc[document 4]. His drawing is
 date March 30, 1799, but document 4 is dated over a year later, October 18, 1800.
 
 image::08-right-page.png[link=self]
