--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -26,6 +26,10 @@
 *** xref:doc3-header.adoc[]
 *** xref:doc3.adoc[]
 * xref:doc4.adoc[]
+** TODO: Full Document View
+**  TODO: Breakdown: Header
+*** TODO: Header
+*** TODO: Submission of Geometric Drawings
 * xref:image7-right-page.adoc[]
 * xref:image8-right-page.adoc[]
 * xref:images9-10-overview.adoc[]
