--- a/modules/1237/pages/index.adoc
+++ b/modules/1237/pages/index.adoc
@@ -6,5 +6,5 @@ The case file of Jobst Heinrich’s Petition to Enlarge Farmyard and Garden is c
 link:https://www.arcinsys.niedersachsen.de/arcinsys/detailAction?detailid=v4978766[NLA BU, K 2, A Nr. 1237] in the Arcinsys catalog 
 system of the Lower Saxony Archives.
 
-It is a case file composed of a cardboard-like folder containing six documents and a document index.
-Upon payment, I received 12 TIF images of the contents of the case file from the Niedersächishces Landesarchiv.
+The case file is folder with a cover on it containing six documents and a document index. 
+The Niedersächishces Landesarchiv provided it as a zip file composed twelve TIF images.
