--- a/todo.adoc
+++ b/todo.adoc
@@ -1,6 +1,7 @@
 = TODO
 
 1. Add more detail to doc-1-forestry-assessment.adoc. Take it from doc1-overview.adoc's narraitive overview.
+2. For document 3 describe the names in the left margin and the signatories. Mention MKaas signed the 
 2. See the "TODO" section I added (From chatgpt). It is not yet part of timeline.adoc.
 3. Finish doc3-overview
 4. Update the timeline. I added a TODO block to it. Mkae sure it has doc2 events. And after completing doc3-overview, add doc3 events
