--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -27,8 +27,8 @@
 *** xref:doc3.adoc[]
 * xref:doc4.adoc[]
 ** TODO: Full Document View
-**  TODO: Breakdown: Header
-*** TODO: Header
+**  Breakdown: Header, Parcels Proposed by Ämter
+*** xref:doc3-header.adoc[]
 *** TODO: Submission of Geometric Drawings
 * xref:image7-right-page.adoc[]
 * xref:image8-right-page.adoc[]
