--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -28,9 +28,9 @@
 * xref:doc4.adoc[]
 ** TODO: Full Document View
 **  Breakdown: Header, Parcels Proposed by Ämter
-*** xref:doc3-header.adoc[]
+*** xref:doc4-header.adoc[]
 *** TODO: Submission of Geometric Drawings
-* xref:image7-right-page.adoc[]
+* xref:reminder-note.adoc[]
 * xref:image8-right-page.adoc[]
 * xref:images9-10-overview.adoc[]
 ** xref:images9-10-full.adoc[]
