--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -31,7 +31,7 @@
 *** xref:doc4-header.adoc[]
 *** TODO: Submission of Geometric Drawings
 * xref:reminder-note.adoc[]
-* xref:image8-right-page.adoc[]
+* xref:doc4-pt-five.adoc[]
 * xref:images9-10-overview.adoc[]
 ** xref:images9-10-full.adoc[]
 ** Breakdown: Header, 1^st^ Directive, 2^nd^ Directive
