--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -32,7 +32,7 @@
 *** TODO: Submission of Geometric Drawings
 * xref:reminder-note.adoc[]
 * xref:doc4-pt-five.adoc[]
-* xref:images9-10-overview.adoc[]
+* xref:doc5-overview.adoc[]
 ** xref:doc5-full.adoc[]
 ** Breakdown: Header, 1^st^ Directive, 2^nd^ Directive
 *** *TODO: Header*
