--- a/todo.adoc
+++ b/todo.adoc
@@ -1,6 +1,7 @@
 = TODO
 
 [arabic,start=1]
+. RESTORE the Drop-Shadow even if there is no ':page-role:'!
 . Add more detail to doc-1-forestry-assessment.adoc. Take it from doc1-overview.adoc's narraitive overview.
 . For document 3 describe the names in the left margin and the signatories. Mention MKaas signed the 
 ** Forestry Office assessment on document 1
