--- a/modules/1237/pages/doc4-pt-five.adoc
+++ b/modules/1237/pages/doc4-pt-five.adoc
@@ -28,7 +28,7 @@ image::08-right-page.png[link=self]
 |7. Fuß Decim: [7 feet, decimal]
 
 |Below entire diagram (horizontal)
-|Dorf Serasse
+|Dorf Strasse (village street or drive)
 |===
 
 === Main Text
