--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -11,7 +11,7 @@ Who expresses dissatisfaction with the planned assignment, claimed he himself wa
 argued the land reassignment would restrict his access for transporting crops.
 
 Fürstin::
-Princess, female ruler (of Schaumburg-Lippe)
+Princess, female ruler of Schaumburg-Lippe
 
 Graf::
 Graf means Count, the Count of Schaumburg-Lippe
