--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -35,7 +35,7 @@
 * xref:doc5-overview.adoc[]
 ** xref:doc5-full.adoc[]
 ** Breakdown: Header, 1^st^ Directive, 2^nd^ Directive
-*** *TODO: Header*
-*** xref:image9.adoc[]
-*** xref:image10.adoc[]
+*** xref:doc5-header.adoc[]
+*** xref:doc5-cammer-directive.adoc[]
+*** xref:doc5-collection-order.adoc[]
 * xref:doc6.adoc[]
