--- a/modules/1237/pages/doc3-overview.adoc
+++ b/modules/1237/pages/doc3-overview.adoc
@@ -16,7 +16,7 @@ Jobst Heinrich's request and to allocated land for him to purchase.
 
 === Offical Directive (11 March 1799) from Cammer to Ämter
 
-On March 11. 1799, the official reply of Vormundliche Cammer to the Ämter (offices) of Bückeburg and Arensburg was
+On March 11. 1799, the official reply of Vormundschaftliche Cammer to the Ämter (offices) of Bückeburg and Arensburg was
 written. The header references (*"S.S"* in upper left, meaing *referenced above*) the document denoted by *"Cam:53"*,
 which is Document 2.
 
