--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -22,7 +22,7 @@ document #4.
 
 Amt::  
 Amt = office. The *Amt* was the *local or
-regional administrative office* responsible for executing the instructions of the Vormundlichte  Cammer
+regional administrative office* responsible for executing the instructions of the Vormundschaftlichte  Cammer
 ("guardianship" Chamber). It handled *field investigations, reports, local enforcement, and petitions*, and
 submitted findings to the Cammer. The Amt had no final authority but provided the *practical groundwork* for the
 Cammer’s decisions.  In the case file, officials of the Amt Bückeburg & Arensburg surveyed land and submitted
