--- a/modules/1237/pages/doc1-header.adoc
+++ b/modules/1237/pages/doc1-header.adoc
@@ -2,7 +2,7 @@
 :page-role: wide
 
 The petition was drawn up by the local governmental administrative office (Amt) in Bückeburg.  It was forwarded to
-the *Vormundliche Cammer*, the guardianship chamber (aslo in Bückeberg) a state-level authority, who are
+the *Vormundschaftliche Cammer*, the guardianship chamber (aslo in Bückeberg) a state-level authority, who are
 responsible for  the text that appears in the header.
 
 image::02-header.png[link=self]
@@ -38,7 +38,7 @@ B[ückebuerg]. June 14, 1798
 
 * *"Nr:1"* in the upper right desiginates it as doucment number 1.
 * *"praes: 30. May 1798."* -- "praes:" is short for praesentiert (presented). May 30, 1798, was the date document 1
-was presented to (reviewed by) the *Vormundlichte Cammer*, the guardianship chamber, a higher, state-level authority.
+was presented to (reviewed by) the *Vormundschaftlichte Cammer*, the guardianship chamber, a higher, state-level authority.
 +
 In smaller German principalities like Schaumburg-Lippe, the *Vormundschaftliche Cammer* typically functioned as a
 kind of higher-level civil authority—combining:
