--- a/modules/1237/pages/doc2-header.adoc
+++ b/modules/1237/pages/doc2-header.adoc
@@ -22,15 +22,15 @@ Forest-Matters
 ....
 |===
 
-=== Text Written by the Vormundliche Kammer
+=== Text Written by the Vormundschaftliche Kammer
 
 * *"2"* in the upper right (with a box drawn around it) desiginates it as doucment number 2.
 
 * *"pr: 6 Merz 1799"* -- *"pr:"* is short for praesentiert (presented). On March 6, 1799, document 2
-was presented before the *Vormundlichte Cammer*, the guardianship chamber, the higher, state-level
+was presented before the *Vormundschaftlichte Cammer*, the guardianship chamber, the higher, state-level
 authority that makes binding decisions.
 
 * *"Cam: Nr:53"* -- or *"Cam[mer] No. 53"* in the upper left is an internal archiving, filing and retreival number assignment to document 2
-by the Vormundliche Cammer.
+by the Vormundschaftliche Cammer.
 * *"Forst-Sachen"* -- indicates the topic of the document: it concerned forestry matters.
 
