--- a/modules/1237/pages/doc4-header.adoc
+++ b/modules/1237/pages/doc4-header.adoc
@@ -12,7 +12,22 @@ Cam:Nr:322. Forstsachen
       der Aemter Bückeburg und Arnesburg
 
         ad ter                     Betr.     
-   Re[s]cr:no 11 Merz          Ausweisung 
+   Rescr:no 11 Merz          Ausweisung 
+              1799                                  
+                  
+                               p. 24 8br 1800  
+....
+
+....
+Chamber no. 322. Forest Matters
+
+                 To 
+      Guardianship Chamber
+                 Report              
+      of the Offices Bückeburg and Arnesburg
+
+        ad ter                     Regarding:     
+   Rescr:no. 11 March               Ausweisung 
               1799                                  
                   
                                p. 24 8br 1800  
