--- a/modules/1237/pages/doc4.adoc
+++ b/modules/1237/pages/doc4.adoc
@@ -39,11 +39,13 @@ Cam: Nr: 322. Forstsachen
 
 An Vormundschaftliche Kammer Bericht der Aemter Bückeburg und Arensburg  
 
-      ad ter                       Betr.  
- Rescr: d. 11ten Merz 1799         Ausweisung
+ad ter                       
+Rescr: d. 11ten Merz 1799         
 
+Betr.  
+Ausweisung
 
-                                     p. 24 8br 1800  
+                            p. 24 8br 1800  
 
 Indem wir die geometrische Zeichnung  
 über die dem Jobst Henrich  
