--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -3,7 +3,7 @@
 == The Actors
 
 Jobst Heinrich Krückeberg::
-A tenant farmer dwelling at No. 10 Berenbusch, living near a forest and the "street" of Berenbusch,
+A tenant farmer dwelling at No. 10 Berenbusch, living near a forest and along Berenbusch "street",
 who wants to enlarge his farmyard and garden.
 
 Weiland of Berenbusch::
