--- a/modules/1237/pages/doc5-header.adoc
+++ b/modules/1237/pages/doc5-header.adoc
@@ -10,8 +10,8 @@ image::doc5-header.png[scale=25,link=self]
 |
 ....
 ad nr. D: 322. [F/S]. S.                          5
-Concept Cammer : Rescripts
-an die Beamte zu Buckeburg
+Draft: Cammer Directive
+to the Officials in Bückeburg
 ....
 
 |
