--- a/modules/1237/pages/doc5-full.adoc
+++ b/modules/1237/pages/doc5-full.adoc
@@ -10,7 +10,7 @@
 |
 [verse]
 ____
-ad nr. D: 322. [S/F]. S.     
+ad nr. D: 322. S. S.     
 Concept Cammer : Rescripts  
 an die Beamte zu Buckeburg  
   
@@ -53,7 +53,7 @@ ____
 |
 [verse]
 ____
-Regarding No. D: 322. F. S. [possibly S.S.]    
+To (or concerning) case D:322, as above.
 Draft: Cammer directive
 To the officials in Bückeburg
 
