--- a/modules/1237/pages/doc5-cammer-directive.adoc
+++ b/modules/1237/pages/doc5-cammer-directive.adoc
@@ -49,7 +49,12 @@ Cap: p: Bolte.
   zuzahlen hat. Wir verbleiben,  
   Buckeburg d 27. October 1800  
   Anstatt p  
-                        A Waag  
+                        
+
+  Mkaas
+  Wint
+  Mgr Danckwerk [appears close the the
+  header of the 2nd Rescript]
 ____
 
 |
