--- a/modules/1237/pages/doc5-rescripts.adoc
+++ b/modules/1237/pages/doc5-rescripts.adoc
@@ -2,6 +2,7 @@
 :page-role: wide
 
 image::09-right-page.png[link=self]
+image::10-left-page.png[link=self]
 
 == Cammer Rescript
 
@@ -91,4 +92,84 @@ header of the 2nd Rescript]
 ....
 ____
 |===
+
+== Cammer Anweisung (Collection Order)
+
+[cols="1a,1a"]
+|===
+|Transliteration|Translation
+
+|
+....
+Concept Cammer: Anweisung H.  
+an den Cammerrentmeister
+Stackmann
+  
+                         Der Cammerrentmeister Stackmann  
+                         wird hiemit angewiesen, von dem  
+                         Colon Krückeberg Nr: 10, zu Schirn- 
+                         eichen für die demselben zur Ver-  
+                         größerung seines Gartens u. Hof-  
+Exp: per Boltesp         raums ausgewiesene Plätze, welche         
+                         zusam̅en 21 Ruten 34 Fus Dec:  
+                         betragen, das Kaufgeld per Rute mit 20 4 mgl. u  
+                         also vierzehn Rthlr 8 mgl. 1 d. zu  
+                         erheben, in der Cammerrechnung  
+                         gehöriges Orts zu vereinnahmen,  
+                         und solche mit dieser Anweisung  
+                         zu rechtfertigen. Bückeburg  
+                         den 27. October 1800.  
+                         Gräflich : p  
+                                                Mkaas  
+                         Juris Danckwerk  
+                         Wint  
+                         
+
+
+
+                         ---------  
+                         Wipperman  
+....
+
+|
+....
+Concept Cammer: Directive H.  
+to the Chamber Rentmaster
+Stackmann  
+  
+                         The Chamber Rentmaster Stackmann  
+                         is hereby instructed, from the  
+                         tenant farmer Krückeberg, No. 10, at Schirneichen,  
+                         for the plots assigned to him for the en-  
+                         largement of his garden and farm-  
+Exp: per Boltesp         yard, which together measure 21 rods 34 feet decimal,  
+                         to collect the purchase price, at the rate per rod of 20 ggr 4 pf,  
+                         amounting to fourteen thalers 8 ggr 1 pf,  
+                         to record the same in the Chamber accounts  
+                         under the appropriate heading,  
+                         and to account for it with this directive.  
+                         Bückeburg,  
+                         27 October 1800.  
+                         By order of the Count: p  
+
+                                                Mkaas  
+                         Juris Danckwerk  
+                         Wint  
+  
+
+                         ---------  
+                         Wipperman  
+
+
+
+....
+|===
+
+[NOTE]
+====
+*Stirneichen* — The term appears here after “Nr: 10” in reference to Colon Krückeberg’s property.  He lived in
+Berenbusch not "Stirneichen", which oes not correspond to any known village (*Ort*) in the region per *Meyers Orts-
+und Verkehrslexikon* (1912). It may represent a misrecorded place name or possibly a *Flurname* (traditional field
+name) used locally in the late 18th–early 19th century.  Its exact reference remains uncertain.
+====
 
