--- a/modules/1237/pages/doc5-rescripts.adoc
+++ b/modules/1237/pages/doc5-rescripts.adoc
@@ -58,37 +58,48 @@ Mgr Danckwerk
 
 |
 ....
-Regarding No. D: 322. S. S.
-Draft: Cammer directive
-To the officials in Bückeburg
+re: no. D: 322. supra scripta                 5
+Draft of the Chamber: Rescripts
+to the officials at Bückeburg
 
-In the Name of the Government
+              Very Gracious Lords,
+              In reply to your report
+              of the 18th of this month concerning the
+              tenant farmer Krückeberg, No. 10 at Beren-
+              busch, for the purpose of enlarging
+              his farmyard and garden by
+              19 rods 44 feet and
+              1 rod 90 feet of allocated
+              plots, and concerning the ground rent
+              (Rottzins) on these, payable for the first time
+              at Michaelmas of this year
+              and thereafter annually in the amount of 2 Mariengroschen
+              1 Pfennig, we hereby inform you without reservation that we
+              have approved the allocation of these plots under
 
-We hereby respond to your report dated the 18th of this month concerning the land allocated to the farmer
-Krückeberg, No. 10 in Berenbusch, for the purpose of enlarging his farmyard and garden—specifically, a total area
-of 19 rods and 44 feet plus 1 rod and 90 feet.
+Cap: per Bolte.
 
-This land is to be subject, starting from Michaelmas (29 September) of this year, to an annual ground rent of 2
-Mariengroschen and 1 Pfennig.
+              the conditions communicated to you
+              in Our Rescript of
+              11 March 1799, as well as the
+              stated rate of the ground rent.
+              You are therefore to ensure that
+              the tenant farmer Krückeberg
+              fulfills exactly the conditions
+              that you have no doubt made known to him,
+              and that he now pay the stipulated purchase price
+              of 2 Mariengroschen 4 Pfennig per 4 rods,
+              amounting in total
+              to 14 Reichsthaler
+              8 Mariengroschen 1 Pfennig,
+              into Our Chamber treasury.
+              We remain,
+              Bückeburg, 27 October 1800
+              For the Count
 
-We hereby confirm without reservation:
-
-That we approve the assignment of this land to him under the same terms and conditions already communicated to you
-in Our official order dated 11 March 1799, and we also approve the proposed annual ground rent.
-
-You are to ensure that Farmer Krückeberg fulfills all the conditions you have no doubt already made known to him.
-
-He is now required to pay the set purchase price at a rate of 2 Reichsthaler and 4 Mariengroschen per rod, totaling
-an amount of 14 Reichsthaler, 8 Mariengroschen, and 1 Pfennig. This payment is to be made to Our revenue office.
-
-We remain,
-Bückeburg, 27 October 1800
-on behalf of the Cammer
-
-                Mkaas
-              Wint
-Mgr Danckwerk [appears close the the
-header of the 2nd Rescript]
+                       Mkaas
+                       Wint
+Mgr Danckwerk
 ....
 |===
 
