--- a/modules/1237/pages/doc1-admin-note.adoc
+++ b/modules/1237/pages/doc1-admin-note.adoc
@@ -14,7 +14,7 @@ record — an internal note for filing and tracking.
 
 == Translation and Translation
 
-[cols="1a,1a"]
+[cols="1a,1a",options="header",frame=none,grid=none]
 |===
 |Transliteration|Translation
 
