--- a/modules/1237/pages/doc4.adoc
+++ b/modules/1237/pages/doc4.adoc
@@ -28,7 +28,7 @@ image::06-right-page.png[link=self]
 
 == Transliteration and Translation
 
-[cols="1a,1a"]
+[cols="1a,1a",options="header",frame=none,grid=none]
 |===
 |Transliteration|Translation
 
