--- a/modules/1237/pages/doc3-overview.adoc
+++ b/modules/1237/pages/doc3-overview.adoc
@@ -1,6 +1,6 @@
 = Document 3: Chamber's Reply Concerning Krückeberg Request (March 11, 1799)
 
-[cols="1a,1a",frame="none",grid="none",options="noheader"]
+[cols="1a,1a",frame=none,grid=none,options="noheader"]
 |===
 |image::05-right-page.png[scale=10,link=self]
 
