--- a/modules/1237/pages/doc5-rescripts.adoc
+++ b/modules/1237/pages/doc5-rescripts.adoc
@@ -4,7 +4,7 @@
 image::09-right-page.png[link=self]
 image::10-left-page.png[link=self]
 
-== Cammer Rescript
+== Approval of Land Assignment – Krückeberg, Berenbusch
 
 [cols="1a,1a",options="header",frame=none,grid=none]
 |===
@@ -108,7 +108,7 @@ Mgr Danckwerk
 ....
 |===
 
-== Cammer Anweisung (Collection Order)
+== Execution of Purchase Contracts – Krückeberg, Berenbusch
 
 [cols="1a,1a",options="header",frame=none,grid=none]
 |===
