--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -36,6 +36,7 @@
 ** xref:doc5-full.adoc[]
 ** Breakdown: Header, 1^st^ Directive, 2^nd^ Directive
 *** xref:doc5-header.adoc[]
-*** xref:doc5-rescripts.adoc[]
+*** xref:doc5-rescripts#rescript1.adoc[]
+*** xref:doc5-rescripts#rescript2.adoc[]
 //*** xref:doc5-collection-order.adoc[]
 * xref:doc6.adoc[]
